# rUNSWift-bootcamp-team2

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  Dockerfile  GETTING_STARTED.md  Makefile  README.md  field_dimensions.json  pyproject.toml
.githooks/: pre-commit
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  general_task.md
containers/robot/: Dockerfile  README.md  docker-compose.yml  run_cameras.sh
image/etc/: asound.conf
image/etc/init.d/: runswiftwireless
image/home/nao/: .bashrc_ubuntu
ml_models/: train.sh
robot/: CMakeLists.txt  main.cpp  runswift.cmake
robot/blackboard/: Blackboard.cpp  Blackboard.hpp  Blackboard.proto  Blackboard.tcc  serialise.cpp
robot/gamecontroller/: GameController.cpp  GameController.hpp  RoboCupGameControlData.cpp  RoboCupGameControlData.hpp
robot/libagent/: libagent.cpp
robot/perception/: PerceptionThread.cpp
robot/receiver/: Team.cpp
robot/simulation/: SimulationThread.cpp
robot/tests/: test_joints_movement.py
robot/thread/: ThreadManager.cpp  ThreadManager.tcc
robot/transmitter/: Commands.cpp  Events.cpp  Events.hpp  Nao.cpp  OffNao.cpp  Team.cpp  Team.hpp
robot/types/: BehaviourSharedData.cpp  BehaviourSharedData.hpp  BroadcastData.cpp  BroadcastData.hpp  RefereeHandDetectorParams.cpp  RefereeHandDetectorParams.hpp  RefereeHandDetectorSettings.cpp  RefereeHandDetectorSettings.hpp  RefereeHandsVisionInfo.hpp  SPLStandardMessage.hpp  VisionInfoIn.hpp  VisionInfoOut.hpp
robot/utils/: Connection.tcc  FieldDimensionsJSON.hpp  Logger.cpp  SPLDefs.hpp  Timer.cpp  Timer.hpp  TransitionPoses.hpp  incapacitated.hpp  options.cpp  speech.cpp  speech.hpp
robot_ws/: frames_2023-11-10_17.44.56.gv
robot_ws/scripts/: install-dependecies.sh  post-rosdep.sh  post-vcs.sh  pre-rosdep.sh  pre-vcs.sh
robot_ws/src/nao_sensor_transform/: CMakeLists.txt  package.xml
robot_ws/src/nao_sensor_transform/include/nao_sensor_transform/: sensor_publisher.hpp
robot_ws/src/nao_sensor_transform/launch/: rviz.launch.py
robot_ws/src/nao_sensor_transform/src/: sensor_publisher.cpp
robots/: robots.cfg  robots_not_at_competition.cfg
softwares/: README.linux.md  README.md
utils/: How to run offnao on Ubuntu 20.md  REMOVE_FROM_HISTORY.md  bootstrap-qt.cmake
utils/offnao/: CMakeLists.txt  ConnectionBar.ui  frame.hpp  main.cpp  offnao-wrapper.sh  visualiser.cpp  visualiser.hpp
utils/parameter-optimizer/: MultiModalCMKFParamsOptimizer.py
utils/pth-tinydnn/: PMCTestB64.nasm
utils/vatnao/: CMakeLists.txt  README.md
utils/vatnao-legacy/: CMakeLists.txt
utils/webnao/: .gitignore  README.md
vision_sandbox/referee_detection/: CMakeLists.txt  main.cpp
vision_sandbox/referee_detection/src/: RefereeHandsDetector.cpp  RefereeHandsDetector.hpp
(+422 files in other folders)
